SampleProject/force-app/main/default/objects/ESG_Standard__c/ESG_Standard__c.object-meta.xml
<CustomObject>
    <label>ESG Standard</label>
    <nameField>
        <label>ESG Standard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ESG Standards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>