SampleProject/force-app/main/default/objects/ESG_Standard__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ESG Standards</relationshipLabel>
    <relationshipName>ESG_Standards</relationshipName>
    <type>Lookup</type>
</CustomField>