SampleProject/force-app/main/default/objects/ESG_Standard__c/fields/Climate_Smart__c.field-meta.xml
<CustomField>
    <fullName>Climate_Smart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Climate Smart</label>
    <type>Checkbox</type>
</CustomField>