SampleProject/force-app/main/default/objects/ESG_Standard__c/fields/Youth_Owned__c.field-meta.xml
<CustomField>
    <fullName>Youth_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Youth Owned</label>
    <type>Checkbox</type>
</CustomField>